2008-05-28  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Report error when declaring a compact class implementing an
	interface, patch by Phil Housley

2008-05-28  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix GTypeModule binding

2008-05-28  Jürg Billeter  <j@bitron.ch>

	* vala/valaexpression.vala:
	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodegenerator.vala:

	Rename Expression.expected_type to Expression.target_type

2008-05-28  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:
	* vala/valamethod.vala:
	* vala/valaproperty.vala:
	* vala/valasemanticanalyzer.vala:
	* gobject/valagidlwriter.vala:

	Compute Method.base_method and Property.base_property when needed
	so that we can already use them in the semantic analyzer

2008-05-28  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodecastexpression.vala:

	Use parentheses to ensure that the full expression is cast

2008-05-27  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:
	* vala/valathrowstatement.vala:
	* gobject/valaccodegenerator.vala:

	Fix temporary variable handling for throw statements

2008-05-27  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala: 
	
	Improved performance of print statement

2008-05-27  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala: 
	* vala/valageniescanner.vala: 
	
	Added optional indent attribute to allow spaces to be used in lieu of tabs for indents

2008-05-27  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala: 
	
	Made GLib using directive optional 

2008-05-26  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* vapi/glib-2.0.vapi (Memory): add atexit () and memory profile
	bindings, fixes bug #530627

2008-05-26  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* vapi/glib-2.0.vapi (Object): add weak pointer references
	bindings and {freeze,thaw}_notify ()

2008-05-26  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala: 
	